--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <img class="image" src="https://images8.alphacoders.com/484/thumb-1920-484717.jpg">
                     </div>
                     <div class="carousel-cell">
-                        <img class="image" src="https://images8.alphacoders.com/484/thumb-1920-484717.jpg">
+                        <img class="image" src="https://wallpapercave.com/wp/ddOb9lC.jpg">
                     </div>
                     <div class="carousel-cell">
                         <img class="image" src="https://images8.alphacoders.com/484/thumb-1920-484717.jpg">
